<resources>
    <string name="app_name">RoomHoursOwnerOne</string>
    <string name="title_activity_maps">Map</string>

    <string name="one_slide">Bienvenido a Roomhours, la app que te permite general un dinero extra alquilando tu habitacion libre por haras.</string>
    <string name="one_slide11">Lorem Ipsum dolor sit amet,Consectetier adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum Sociis natoque penatibus et magnis dis parturient montes,nascetur ridiculus mus</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>
    <string name="title_activity_use_current_location">Map</string>
    <string name="facebook_app_id">2448099172163936</string>
    <string name="Ok">Ok</string>
    <string name="upload_house_images">Upload House Images</string>
    <string name="up_to_10_images">(up to 10 images)</string>
    <string name="photo_help_guests_imagine_staying_in_your_place_you_can_start_with_one_and_add_more_after_you_pulish">Photo help guests imagine staying in your place. You can start with one and add more after you pulish</string>
    <string name="add_photo">Add Photo</string>
    <string name="next">Next</string>
    <string name="ad_title">Ad Title</string>
    <string name="ad_description">Ad Description</string>
    <string name="write_here">Write here</string>
    <string name="all_image">All Image</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="reset">Reset</string>
    <string name="layla_parker">Layla parker</string>
    <string name="country">Country</string>
    <string name="autonomous_community">Autonomous Community</string>
    <string name="city">City</string>
    <string name="street_number_floor">Street,number,floor</string>
    <string name="zipcode">ZipCode</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="thanks_you_very_much_for_trusting_roomshours_it_is_important_to_answer_quickly_the_responce_time_of_the_first_message_is_measured">Thanks you very much for trusting RoomsHours. it is important to answer quickly.the responce time of the first message is measured</string>
    <string name="done">Done</string>
    <string name="house_options_multiple_checkbox_the_options_available_can_be_clickable_as_a_checkbox">House Options (Multiple CheckBox -The Options available can be clickable as a checkbox)</string>
    <string name="private_bathroom">Private bathroom</string>
    <string name="in_the_room">in the room</string>
    <string name="air">Air</string>
    <string name="conditioned">Conditioned</string>
    <string name="heating">Heating</string>
    <string name="log_in">LOG IN</string>
    <string name="para_continuar">PARA CONTINUAR</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="get_started">Get Started</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign UP</string>
    <string name="welcome">SIGN UP</string>
    <string name="dummy_text_is_test_that_is_used_in_the_n_publishing_industry_or_by_web_designers_to">Dummy text is test that is used in the \n publishing industry or by web designers to</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="all_preview_images">All Preview Images</string>
    <string name="price_options_single_checkbox_just_1_option_must_be_clickable_as_a_checkbox">Price Options (Single checkbox - just 1 option must be clickable as a checkbox)</string>
    <string name="recommend_price_500_00_the_prices_are_narked_with_values_showed_in_the_example_this_option_is_marked_by_default">Recommended prices, this option is checked by default.</string>
    <string name="customized_price_500_00_the_costumer_is_free_to_insert_the_prices_he_wants">Personalized price, the client is free to insert the prices they want</string>
    <string name="the_rooms_prices_must_follow_this_price_structure">The Rooms Prices must follow this Price Structure</string>
    <string name="price_1_hour">Price 1 hour</string>
    <string name="price_2_hour">Price 2 hours</string>
    <string name="price_3_hour">Price 3 hours</string>
    <string name="price_4_6_hour">Price 4 - 6 hours</string>
    <string name="price_for_night">Price for night*</string>
    <string name="weekend_night_price">weekend night price*</string>
    <string name="add_the_following_disclaim_night_prices_goes_from_8pm_to_11am_the_next_day">Add the following Disclaim : Night Prices goes From 8pm to 11am the next day</string>
    <string name="prices_night_comprendre_from_15_00_to_12_00_the_next_day">**<b>Price per night:</b> from 8pm on the day of entry to 11am the next day.</string>
    <string name="options_checkbox_by_clciking_the_box_the_host_accepts_to_offer_a_30_discount_when_the_host_is_just_one_person">Options CheckBox (By clciking the box the Host Accepts to offer a 30% Discount when the Host is just one person)</string>
    <string name="i_want_to_offer_a_30_discount_if_one_person_comes_alone">I want to offer a 30 % discount if one person comes alone</string>
    <string name="log_out">Log out</string>
    <string name="general">General</string>
    <string name="add_new_rooms">Add New Rooms</string>
    <string name="change_password">Change Password</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="notification">Notification</string>
    <string name="allow_push_notification">Allow push notification</string>
    <string name="sign_up_one">SIGN UP</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="are_you_sure_you_want_to_remove_the_rooms">are you sure you want to remove the Rooms</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="my_listing_room">My Listing Room</string>
    <string name="message">Message</string>
    <string name="say_thankyou">Say Thankyou</string>
    <string name="bienvenido">BIENVENIDO!</string>
    <string name="encourange_guest_to_book">Encourange Guest To Book</string>


    <string name="host_to_publish">Host To Publish</string>
    <string name="vjhjhh">vjhjhh</string>
    <string name="select_language">Select Language</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="bank_code">Bank Code</string>
    <string name="area_code">Area Code</string>
    <string name="type_a_message">Type a message</string>
    <string name="email_address_mobile_number">Email Address / Mobile Number</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="change_language">Change Language</string>
    <string name="success">Success</string>
    <string name="enter_price">Please Enter One Hour Price</string>
    <string name="x1">X1 hour prices must be higher than X-2 hours.</string>
    <string name="x2">X2 hour prices must be higher than X-3 hours.</string>
    <string name="x3">X3 hour prices must be higher than X-4 hours.</string>
    <string name="x4">X4 hour prices must be higher than X-5 hours.</string>
    <string name="x5">X5 hour prices must be higher than X-6 hours.</string>
    <string name="please">Please click BACK again to exit</string>
    <string name="check">Please Check Network</string>
    <string name="image">Please enter Minimum one Image</string>
    <string name="enter_title">Please Enter Title.</string>
    <string name="enter_description">Please Enter description.</string>
    <string name="login_success">Login successful</string>
    <string name="login_unsucces">Login Unsuccessful</string>
    <string name="somting_wrong">Something went wrong</string>
    <string name="have_dont_imgae">You haven\'t picked Image</string>
    <string name="holder_name">Please Enter Bank Holder Name</string>
    <string name="bank_name_new">Please Enter Bank Name</string>
    <string name="enter_mbl_number">Please Enter Bank Account Number</string>
    <string name="enter_code_ple">Please Enter Code</string>
    <string name="area">Please Enter Area</string>
    <string name="street_flowr">Please Enter Street,number,floor</string>
    <string name="zipCOde">Please Enter ZipCode</string>
    <string name="enter_email">Please Enter email.</string>
    <string name="enter_password">Please Enter password.</string>

    <string name="iempieza_a_general_dinero_desde_ya_mismo">iEmpieza a general dinero desde ya mismo!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="wifi">Wifi</string>
    <string name="dis">By clicking this checkbox, you declare that you agree to apply a 30% discount when the host alone is a person</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="log_in_o">Log in</string>
    <string name="house_options">House Options (Multiple CheckBox -The Options available can be clickable as a checkbox)</string>
    <string name="skip">Skip</string>
    <string name="recommended">Recommended</string>
    <string name="hay_tu_reserva_ahora">Empieza a hospedar!</string>

</resources>
