<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grayLight"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="#fff"
            >

            <LinearLayout
                android:background="@color/grayLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/padding12"
                    android:text="@string/are_you_sure_you_want_to_remove_the_rooms"
                    android:textColor="#000">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding10"
                    android:layout_marginBottom="@dimen/padding10"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <Button
                        android:id="@+id/btn_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/padding25"
                        android:background="@drawable/bg"
                        android:text="@string/yes"
                        android:textColor="#fff">

                    </Button>

                    <Button
                        android:id="@+id/btn_no"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/padding25"
                        android:layout_marginLeft="@dimen/padding10"
                        android:background="@drawable/bg_btnr"
                        android:text="@string/no"
                        android:textColor="#fff">

                    </Button>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>